// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search matches the snapshot 1`] = `
.c2 {
  padding: 10px;
  z-index: 1;
  width: 50px;
  height: 50px;
  border: 0;
  background: none;
}

.c2:hover {
  background-color: #ec0000;
  cursor: pointer;
}

.c2:hover svg {
  fill: white;
}

.c2:focus {
  outline: 4px solid #fec813;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  background-color: #f5f5f5;
}

.c6 {
  font-size: 18px;
  line-height: 25px;
  font-family: Avenir Next LT W01 Demi;
  font-weight: 400;
  margin-bottom: 10px;
}

.c10 {
  border: #767676 solid 1px;
  height: 44px;
  padding: 9px 9px 11px;
  width: 100%;
  margin: 10px 0;
}

.c10,
.c10::-webkit-input-placeholder {
  font-size: 1em;
}

.c10,
.c10::-moz-placeholder {
  font-size: 1em;
}

.c10,
.c10:-ms-input-placeholder {
  font-size: 1em;
}

.c10,
.c10::placeholder {
  font-size: 1em;
}

.c10:focus {
  outline: #fec813 solid 4px;
  outline-offset: 0;
  border: black solid 1px;
}

.c7 {
  font-size: 16px;
  line-height: 22px;
  color: #767676;
}

.c1 {
  max-width: 1024px;
  width: 100%;
  z-index: 1;
  position: relative;
  margin-bottom: 0px;
}

.c4 {
  min-width: 70px;
  max-width: 620px;
  margin: 0 auto;
  position: relative;
}

.c9 {
  position: absolute;
  top: 20px;
  right: 14px;
}

.c8 {
  position: relative;
}

.c11 {
  position: absolute;
  min-width: 70px;
  max-width: 620px;
  width: 100%;
  top: calc(100% - 11px);
  z-index: 1;
}

.c3 {
  position: absolute;
  right: 0;
  top: -50px;
}

.c5 {
  display: none;
  max-width: 620px;
  margin: 0 auto;
}

@media (max-width:1200px) {
  .c0 {
    padding-top: 54px;
  }
}

@media (max-width:650px) {
  .c4 {
    max-width: calc(100vw - 30px);
  }
}

@media (max-width:650px) {
  .c11 {
    max-width: calc(100vw - 30px);
  }
}

<form
  action=""
  class="c0 no-print"
  data-testid="search-form"
>
  <legend
    class="visuallyhidden"
  >
    Legend text
  </legend>
  <div
    class="c1"
  >
    <button
      class="c2 c3"
      data-testid="search-toggle"
      size="20"
      type="button"
    >
      <svg
        data-testid="searchToggle-search-icon"
        focusable="false"
        viewBox="0 0 32 32"
        width="20"
      >
        <path
          d="M32 29.119l-9.825-9.825a12.217 12.217 0 1 0-2.88 2.881L29.118 32 32 29.119zm-19.771-8.746a8.145 8.145 0 1 1 0-16.289 8.145 8.145 0 0 1 0 16.29z"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="visuallyhidden"
        data-testid="searchToggle-label"
      >
        Toggle text
      </span>
    </button>
    <div
      class="c4"
    >
      <div
        class="c5"
        data-testid="search-foldout"
      >
        <label
          class="c6"
          for="searchInput"
        >
          Term text
        </label>
        <div
          class="c7"
        >
          Hint text
        </div>
        <div
          class="c8"
        >
          <div
            class="c9"
          />
          <input
            autocapitalize="off"
            autocomplete="off"
            autocorrect="off"
            class="c10"
            id="searchInput"
            spellcheck="false"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="c11"
      />
    </div>
  </div>
</form>
`;

exports[`Search should render results 1`] = `
.c14 {
  margin: 0;
  color: #000000;
  font-weight: inherit;
  font-size: 1rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.25;
  margin-bottom: 0;
  font-stretch: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  color: #000000;
}

.c15:focus {
  background-color: #FEC813;
}

.c15 .c19 {
  margin: 3px;
}

.c15 .c19 svg rect,
.c15 .c19 svg polygon,
.c15 .c19 svg path {
  fill: #000000;
}

.c15:hover {
  color: #ec0000;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c15:hover .c19 svg rect,
.c15:hover .c19 svg polygon,
.c15:hover .c19 svg path {
  fill: #ec0000;
}

.c2 {
  padding: 10px;
  z-index: 1;
  width: 50px;
  height: 50px;
  border: 0;
  background: none;
}

.c2:hover {
  background-color: #ec0000;
  cursor: pointer;
}

.c2:hover svg {
  fill: white;
}

.c2:focus {
  outline: 4px solid #fec813;
}

.c16 {
  padding: 0 !important;
  font-weight: 400;
}

.c16:focus {
  outline: 4px solid #ffc90e !important;
}

.c16:hover,
.c16:focus {
  color: #ec0000;
  fill: #ec0000;
}

.c18 {
  vertical-align: baseline;
  margin-right: 5px;
}

.c13 {
  padding-left: 4px;
}

.c17 {
  margin-left: 4px !important;
  line-height: 26px;
}

.c17 span {
  vertical-align: top;
}

.c12 {
  background: white;
  border-top: none;
  border: #767676 solid 1px;
  width: 100%;
}

.c12 li:first-of-type {
  margin-top: 8px !important;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  background-color: #f5f5f5;
}

.c6 {
  font-size: 18px;
  line-height: 25px;
  font-family: Avenir Next LT W01 Demi;
  font-weight: 400;
  margin-bottom: 10px;
}

.c10 {
  border: #767676 solid 1px;
  height: 44px;
  padding: 9px 9px 11px;
  width: 100%;
  margin: 10px 0;
}

.c10,
.c10::-webkit-input-placeholder {
  font-size: 1em;
}

.c10,
.c10::-moz-placeholder {
  font-size: 1em;
}

.c10,
.c10:-ms-input-placeholder {
  font-size: 1em;
}

.c10,
.c10::placeholder {
  font-size: 1em;
}

.c10:focus {
  outline: #fec813 solid 4px;
  outline-offset: 0;
  border: black solid 1px;
}

.c7 {
  font-size: 16px;
  line-height: 22px;
  color: #767676;
}

.c1 {
  max-width: 1024px;
  width: 100%;
  z-index: 1;
  position: relative;
  margin-bottom: 0px;
}

.c4 {
  min-width: 70px;
  max-width: 620px;
  margin: 0 auto;
  position: relative;
}

.c9 {
  position: absolute;
  top: 20px;
  right: 14px;
}

.c8 {
  position: relative;
}

.c11 {
  position: absolute;
  min-width: 70px;
  max-width: 620px;
  width: 100%;
  top: calc(100% - 11px);
  z-index: 1;
}

.c3 {
  position: absolute;
  right: 0;
  top: -50px;
}

.c5 {
  display: none;
  max-width: 620px;
  margin: 0 auto;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .c12 a {
    height: 26px;
  }
}

@media (max-width:1200px) {
  .c0 {
    padding-top: 54px;
  }
}

@media (max-width:650px) {
  .c4 {
    max-width: calc(100vw - 30px);
  }
}

@media (max-width:650px) {
  .c11 {
    max-width: calc(100vw - 30px);
  }
}

<form
  action=""
  class="c0 no-print"
  data-testid="search-form"
>
  <legend
    class="visuallyhidden"
  >
    Legend text
  </legend>
  <div
    class="c1"
  >
    <button
      class="c2 c3"
      data-testid="search-toggle"
      size="20"
      type="button"
    >
      <svg
        data-testid="searchToggle-search-icon"
        focusable="false"
        viewBox="0 0 32 32"
        width="20"
      >
        <path
          d="M32 29.119l-9.825-9.825a12.217 12.217 0 1 0-2.88 2.881L29.118 32 32 29.119zm-19.771-8.746a8.145 8.145 0 1 1 0-16.289 8.145 8.145 0 0 1 0 16.29z"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="visuallyhidden"
        data-testid="searchToggle-label"
      >
        Toggle text
      </span>
    </button>
    <div
      class="c4"
    >
      <div
        class="c5"
        data-testid="search-foldout"
      >
        <label
          class="c6"
          for="searchInput"
        >
          Term text
        </label>
        <div
          class="c7"
        >
          Hint text
        </div>
        <div
          class="c8"
        >
          <div
            class="c9"
          />
          <input
            autocapitalize="off"
            autocomplete="off"
            autocorrect="off"
            class="c10"
            id="searchInput"
            spellcheck="false"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="c11"
      >
        <ul
          class="c12  links"
        >
          <li>
            <strong
              class="c13"
            >
              Adressen
            </strong>
            <ul
              class="links"
            >
              <li>
                <a
                  class="c14 c15 c16 c17"
                  data-vbo-id="0363010000740956"
                  href="/"
                >
                  <svg
                    class="c18"
                    focusable="false"
                    viewBox="0 0 32 32"
                    width="14"
                  >
                    <path
                      d="M9.757 32l-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"
                      fill-rule="evenodd"
                    />
                  </svg>
                  <span
                    class="linklabel"
                  >
                    Foo bar
                  </span>
                </a>
              </li>
              <li>
                <a
                  class="c14 c15 c16 c17"
                  data-vbo-id="0363010000740957"
                  href="/"
                >
                  <svg
                    class="c18"
                    focusable="false"
                    viewBox="0 0 32 32"
                    width="14"
                  >
                    <path
                      d="M9.757 32l-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"
                      fill-rule="evenodd"
                    />
                  </svg>
                  <span
                    class="linklabel"
                  >
                    Bar baz
                  </span>
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </div>
</form>
`;
